--- a/src/CSimple/Pages/SettingsPage.xaml
+++ b/src/CSimple/Pages/SettingsPage.xaml
@@ -112,63 +112,8 @@
                     </StackLayout>
                 </StackLayout>
 
-                <BoxView class="HRule" />
-                <Label Text="Units" class="SectionTitle"/>
-                <Grid RowDefinitions="30,30">
-                    <Grid.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding SelectUnits}"
-                                            CommandParameter="imperial"/>
-                    </Grid.GestureRecognizers>
-                    <Label Grid.Row="0" Text="Imperial" class="Subhead"/>
-                    <Label Grid.Row="1"
-                        Text="˚F / mph / miles / inches" class="SubContent"/>
-                    <Image
-                        x:Name="Imperial"
-                        Grid.RowSpan="2"
-                        Aspect="Center"
-                        IsVisible="{Binding IsImperial}"
-                        Source="checkmark_icon.png"
-                        HorizontalOptions="End"
-                        VerticalOptions="Center"/>
-                </Grid>
                 <BoxView class="HRule"/>
-                <Grid RowDefinitions="30,30">
-                    <Grid.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding SelectUnits}"
-                                            CommandParameter="metric"/>
-                    </Grid.GestureRecognizers>
-                    <Label Grid.Row="0"
-                            Text="Metric" class="Subhead"/>
-                        <Label Grid.Row="1"
-                            Text="˚C / kmh / km / millimeters / milibars" class="SubContent"/>
-                    <Image x:Name="Metric"
-                            Grid.RowSpan="2"
-                        Aspect="Center"
-                            IsVisible="{Binding IsMetric}"
-                            Source="checkmark_icon.png"
-                            HorizontalOptions="End"
-                            VerticalOptions="Center"/>
-                </Grid>
-                <BoxView class="HRule"/>
-                <Grid RowDefinitions="30,30">
-                    <Grid.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding SelectUnits}"
-                                            CommandParameter="hybrid"/>
-                    </Grid.GestureRecognizers>
-                    <Label Grid.Row="0"
-                            Text="Hybrid" class="Subhead"/>
-                        <Label Grid.Row="1"
-                            Text="˚C / mph / miles / millimeters / millibars" class="SubContent"/>
-                    <Image x:Name="Hybrid"
-                            Grid.RowSpan="2"
-                        Aspect="Center"
-                            IsVisible="{Binding IsHybrid}"
-                            Source="checkmark_icon.png"
-                            HorizontalOptions="End"
-                            VerticalOptions="Center"/>
-                </Grid>
-                <BoxView class="HRule"/>
-                <Label Text="More" class="SectionTitle"/>
+                <Label Text="App" class="SectionTitle"/>
                 <Label Grid.Row="0"
                                 Text="Support" class="Subhead">
                     <Label.GestureRecognizers>
